syntax = "proto3";
package telemetry;

service TelemetryService {
    rpc getHeatMap(HeatMapRequest) returns (HeatMapResponse);
}

message HeatMapRequest {
    string name = 1;
}

message HeatMapResponse {
    string message = 1;
}